# eikonalfm

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  conf.py  main.py  pyproject.toml  recompile_extensions.sh  setup.py  setup_inplace.py
.github/workflows/: dist pypi.yml  dist testpypi.yml  test_wheels.yml  testing.yml  wheels.yml
docs/: conf.py  index.md
eikonalfm/: __init__.py  c_test.cpp  cfm.cpp  debugtests.h  factoredmarcher.cpp  factoredmarcher.h  factoredmarcher.hpp  heap.cpp  marcher.cpp  marcher.h  marcher.hpp  memorymanagement.md  python_test.cpp  setup.py
src/eikonalfm/: __init__.py  c_test.cpp  cfm.cpp  cfm.pyi  debugtests.h  factoredmarcher.cpp  factoredmarcher.hpp  heap.cpp  marcher.cpp  marcher.hpp  python_test.cpp
tests/: depth_dependent.py  distance.py  mesh.py  mon_increasing.py  perturbed.py  procedures.py  shortestpath.py  simple.py  test_arguments.py  test_distance.py  test_fast_marching.py
